[package]
name = "sepo_miner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
futures-util = { version = "0.3.31", features = ["sink", "io"] }
hex = "0.4.3"
rand = "0.9.2"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"
url = "2.5.8"
uuid = { version = "1.20.0", features = ["v4"] }
